# osr-editor

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: phase-0-plan.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  spec.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: area-content-cards.test.tsx  area-content-cards.tsx  author-notes-card.test.tsx  author-notes-card.tsx  author-notes.tsx  blocked-op-dialog.test.tsx  blocked-op-dialog.tsx  conversion-screen.test.tsx  conversion-screen.tsx  conversion-watcher.tsx  convert-pdf-dialog.test.tsx  convert-pdf-dialog.tsx  corrections-panel.tsx  detach-dialog.tsx  diagnostics-panel.tsx  equipment-picker.tsx  export-dialog.tsx  fidelity-dialog.tsx  forge-dialogs.tsx  forge-panels.test.tsx  forge-panels.tsx  forge-preview-dialog.tsx  forms.tsx  home-screen.test.tsx  home-screen.tsx  import-dialog.test.tsx  import-dialog.tsx  level-features.tsx  list-editor.tsx  map-canvas.tsx  map-dialogs.tsx  map-editor.test.tsx  map-editor.tsx  map-inspector.tsx  mini-level-picker.tsx  monster-picker.test.tsx  monster-picker.tsx  monster-resolution-panel.tsx  monsters-section.test.tsx  monsters-section.tsx  (+19 more)
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  command.tsx  context-menu.tsx  dialog.tsx  input.tsx  scroll-area.tsx  sonner.tsx  textarea.tsx  tooltip.tsx
frontend/src/hooks/: use-committed-field.test.tsx  use-committed-field.ts  use-conversion-poll.test.tsx  use-conversion-poll.ts
frontend/src/lib/: address.test.ts  address.ts  api.ts  apply-delta.test.ts  apply-delta.ts  catalogs.test.ts  catalogs.ts  content-builders.test.ts  content-builders.ts  conversion.test.ts  conversion.ts  corrections.test.ts  corrections.ts  flags.test.ts  flags.ts  import-mapping.test.ts  import-mapping.ts  lint-actions.test.ts  lint-actions.ts  monster-builders.test.ts  monster-builders.ts  notation.test.ts  notation.ts  review.test.ts  review.ts  statblock-form.test.ts  statblock-form.ts  statblock.ts
frontend/src/map/: edge-key.test.ts  edge-key.ts  gestures.test.ts  gestures.ts  hit-test.test.ts  hit-test.ts  render.ts  stocking.test.ts  stocking.ts  view.ts
frontend/src/store/: project-store.test.ts  project-store.ts
frontend/src/test/: fixtures.ts  setup.ts
frontend/src/types/: index.ts  translations.test.ts
scripts/: generate_types.py
src/osreditor/: __init__.py  addresses.py  app.py  catalogs.py  config.py  conversions.py  diagnostics.py  documents.py  errors.py  forge.py  forge_edits.py  importers.py  lint.py  ops.py  overrides.py  projects.py  providers.py  publish.py  serialize.py  sidecar.py  store.py
tests/: conftest.py  generate_documents_golden.py  generate_forge_workdir.py  generate_small_module.py  generate_torture_fixture.py  test_app.py  test_catalogs.py  test_config.py  test_content_ops.py  test_conversion_routes.py  test_conversions.py  test_diagnostics.py  test_documents.py  test_forge.py  test_forge_check.py  test_forge_edits.py  test_forge_routes.py  test_forge_translate.py  test_geometry_ops.py  test_importers.py  test_lint.py  test_lint_parity.py  test_management_ops.py  test_monster_ops.py  test_ops.py  test_overrides.py  test_package.py  test_projects.py  test_providers.py  test_publish.py  test_service.py  test_sidecar.py  test_small_module.py  test_store.py
tests/assets/: README.md
tests/e2e/: conversion.spec.ts  forge-milestone.spec.ts  forge.spec.ts  map.spec.ts  milestone.spec.ts  monsters.spec.ts  smoke.spec.ts  stocking.spec.ts  tsconfig.json
tests/fixtures/: golden_adventure.json  small_module.json  torture_geometry.json
tests/fixtures/forge_workdir/: run.json
tests/fixtures/forge_workdir/pages/: 0001.txt  0002.txt
tests/fixtures/forge_workdir/stages/: areas.millstone-warrens.1.json  areas.millstone-warrens.2.json  areas.sunken-vault.1.json  areas.sunken-vault.2.json  monsters.json  statblocks.json  survey.json
